--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express": "^5.2.1",
     "mongoose": "^9.1.2",
     "morgan": "^1.10.1",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "zod": "^4.3.5"
   }
 }
